# Physics-engine

./: .gitignore  CMakeLists.txt  README.md
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/3d_env_20260718/: index.md  spec.md
conductor/archive/diverse_gears_20260718/: index.md  metadata.json  plan.md  spec.md
conductor/archive/diverse_gears_ui_20260718/: metadata.json  spec.md
conductor/archive/involute_profiles_20260718/: index.md  metadata.json  plan.md  spec.md
conductor/archive/mvp_20260718/: index.md
conductor/archive/true_3d_gears_20260718/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/3d_env_20260718/: metadata.json  plan.md
conductor/tracks/diverse_gears_ui_20260718/: index.md  plan.md
conductor/tracks/mvp_20260718/: metadata.json  plan.md  spec.md
conductor/tracks/ui_gizmos_20260718/: index.md  metadata.json  plan.md  spec.md
docs/: ARCHITECTURE.md
include/: CommandQueue.hpp  ConstraintSolver.hpp  DebugRenderer.hpp  EditorCamera.hpp  GearEngine.hpp  GearMeshGenerator.hpp  PhysicsUtils.hpp  WorkspaceEnvironment.hpp
include/UI/: Theme.hpp  UIContext.hpp
src/: GearMeshGenerator.cpp  main.cpp
src/UI/: Theme.cpp
tests/: GearEngine_test.cpp  GearMeshGenerator_test.cpp  PhysicsUtils_test.cpp  UIContext_test.cpp  WorkspaceEnvironment_test.cpp
